# bflb-rust-experiment

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
bflb-hal/: Cargo.toml  README.md
bflb-hal/src/: adc.rs  atomic.rs  bl808_m0.rs  cache.rs  cam.rs  clock.rs  cpu.rs  dma.rs  gpio.rs  hart.rs  i2c.rs  interrupt.rs  lib.rs  power.rs  sealed.rs  time.rs  uart.rs
bflb-hal/src/arch/: mod.rs
bflb-hal/src/arch/bl808/: cci.rs  glb.rs  gpip.rs  hbn.rs  ipc.rs  mcu_misc.rs  mjpeg.rs  mm_glb.rs  mm_misc.rs  mod.rs  pds.rs  sf_ctrl.rs
bflb-hal/src/arch/riscv/: clic.rs  mod.rs  plic.rs  std.rs  theadcmo.rs  xtheadcmo.rs  xtheadcsr.rs  xtheadint.rs  xtheadsync.rs
bflb-hal/src/bl808/: addr.rs  aon.rs  cam.rs  camera.rs  clock.rs  csi.rs  dma.rs  dsp2_misc.rs  dtsrc.rs  gpio.rs  i2c.rs  irq.rs  mod.rs  time.rs  timer.old.rs  uart.rs  usb.rs  vdo.rs
bflb-hal/src/bl808/mmio/: aon.rs  csi.rs  mcu_misc.rs  mm_glb.rs  mm_misc.rs  mod.rs  sf_ctrl.rs  vdo.rs
bflb-hal/src/cam/: imx477.rs
bflb-hal/src/clock/: analog.rs  dma.rs  i2c.rs  mcu.rs  mm.rs  mod.rs  pll.rs  pwm.rs  uart.rs
bflb-hal/src/peripheral/: adc.rs  cam.rs  clock.rs  cpu.rs  dma.rs  flash.rs  gpio.rs  i2c.rs  interrupt.rs  irq.rs  mjpeg.rs  mod.rs  time.rs  uart.rs
bflb-hal/src/peripheral/clock/: i2c.rs  mcu.rs  mm.rs  uart.rs
bflb-hal/src/register/: addr.rs  cam.rs  cci.rs  glb.rs  hbn.rs  mjpeg.rs  mod.rs  pds.rs  uart.rs  vdo.rs
bflb-hal/tools/: parse_reg.py
bflb-rt/: Cargo.toml  README.md  build.rs
bflb-rt/src/: allocator.rs  bl808_d0.rs  bl808_m0.rs  clic.rs  hart.rs  lib.rs  task.rs  thread.rs  trap.rs
bflb-rt/src/asm/: bl808_d0.asm  bl808_m0.asm  common.asm  rv32i_thread.asm  rv32imaf_trap.asm  rv64imaf_trap.asm
bflb-rt/src/link/: bl808_d0.x  bl808_m0.x
bflb-rt/tools/: gen_chips.py
embedded-hal/: Cargo.toml  README.md
embedded-hal/src/: io.rs  lib.rs  mmio.rs  time.rs
embedded-rt/: Cargo.toml
embedded-rt/src/: lib.rs
embedded-rt/src/asm/: bl808_d0.asm  bl808_m0.asm  mod.rs
embedded-rt/src/chip/: mod.rs
embedded-rt/src/chip/bl808/: mod.rs
embedded-rt/src/link/: bl808_d0.x
embedded-rt/src/trap/: mod.rs
embedded-util/: Cargo.toml  README.md
embedded-util/src/: atomic.rs  lib.rs  mmio.rs  peripheral.rs  reg.rs  register.rs
examples/bl808/src/: main.rs
examples/ox64/: Cargo.toml
examples/ox64-d0/: Cargo.toml
examples/ox64-d0/src/: main.rs
examples/ox64-m0/: Cargo.toml
examples/ox64-m0/src/: main.rs
examples/ox64/src/: main.rs
riscv-hal/: Cargo.toml  README.md
riscv-hal/src/: clic.rs  csr.rs  lib.rs  plic.rs
usb-hal/: Cargo.toml  README.md
usb-hal/src/: lib.rs  pool.rs
usb-hal/src/class/: mod.rs
usb-hal/src/ehci/: data.rs  mod.rs  reg.rs
usb-hal/src/host/: mod.rs
usb-hal/src/port/: mod.rs
usb-hal/src/port/ehci/: data.rs  mod.rs  reg.rs
