[package]
name = "bflb-hal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-util = { path = "../embedded-util", version = "0.1" }
riscv-hal = { path = "../riscv-hal", version = "0.1" }
# stable_deref_trait = { version = "1.2.0", default-features = false, features = ["alloc"] }

[features]
bl808_m0 = []
bl808_d0 = []
bl808_lp = []
