[package]
name = "bflb-hal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-util = { path = "../embedded-util", version = "0.1" }
riscv-hal = { path = "../riscv-hal", version = "0.1" }
critical-section = "1.1"
heapless = "0.7"
spin = "0.9"

[features]
bl-critical-section = ["critical-section/restore-state-bool"]
bl808-m0 = []
bl808-d0 = []
bl808-lp = []
