[package]
name = "bflb-rt"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bflb-hal = { path = "../bflb-hal", version = "0.1", features = ["bl-critical-section"] }
riscv-hal = { path = "../riscv-hal", version = "0.1" }
embedded-util = { path = "../embedded-util", version = "0.1" }

static-alloc = "0.2"

[features]
default = []
bl808-m0 = ["bflb-hal/bl808-m0"]
bl808-d0 = ["bflb-hal/bl808-d0"]
bl808-lp = ["bflb-hal/bl808-lp"]
panic-abort = []
