[package]
name = "example-bl808"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bflb-rt = { path = "../../bflb-rt", version = "0.1", features = ["bl808_m0"] }
bflb-hal = { path = "../../bflb-hal", version = "0.1" }
embedded-hal = { path = "../../embedded-hal", version = "0.1" }
riscv-hal = { path = "../../riscv-hal", version = "0.1" }
