[package]
name = "example-bl808"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bflb-rt = { path = "../../bflb-rt", version = "0.1", features = ["bl808-m0", "panic-abort"] }
embedded-util = { path = "../../embedded-util", version = "0.1" }
riscv-hal = { path = "../../riscv-hal", version = "0.1" }
